@@ -1,3 +1,10 @@
+2013-01-16  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* i386-gen.c (operand_type_init): Add OPERAND_TYPE_IMM32_64.
+
+	* i386-init.h: Regenerated.
+	* i386-tbl.h: Likewise.
+
 2013-01-15  Nick Clifton  <nickc@redhat.com>
 
 	* v850-dis.c (get_operand_value): Sign extend V850E_IMMEDIATE
